--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -13,14 +13,14 @@
   margin-bottom: 5%;
 }
 
-.logInROW {
-  /* width: 100%; */
-  /* height: 200%; */
+/* .logInROW { */
+/* width: 100%; */
+/* height: 200%; */
 
-  /* background-image: url("https://www.impel.eu/wp-content/uploads/2019/08/mediterranean-sea.jpg"); */
-  /* background-repeat: repeat; */
-  /* background-image: url("assets/images/images/tapetTest.png"); */
-}
+/* background-image: url("https://www.impel.eu/wp-content/uploads/2019/08/mediterranean-sea.jpg"); */
+/* background-repeat: repeat; */
+/* background-image: url("assets/images/images/tapetTest.png"); */
+/* } */
 
 .addVacationForm {
   width: 500px;
