--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -3,51 +3,21 @@ font-family: 'Merienda', cursive;
 font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Open Sans', sans-serif; */
 
-.logInForm {
-  width: 400px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-left: 54%;
-  margin-top: 19%;
-  margin-bottom: 5%;
-}
-.RegistrationForm {
-  width: 500px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-left: 54%;
-  margin-top: 19%;
-  margin-bottom: 5%;
-}
 .logo {
   font-family: "Cinzel Decorative", cursive;
   /* color: white; */
 }
-.vacationLogo {
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.699);
-}
+
 .welcome {
   font-family: "Merienda", cursive;
   /* display: inline-block; */
   /* margin-right: 600px; */
 }
 
-/* .logInROW { */
-/* width: 100%; */
-/* height: 200%; */
-
-/* background-image: url("https://www.impel.eu/wp-content/uploads/2019/08/mediterranean-sea.jpg"); */
-/* background-repeat: repeat; */
-/* background-image: url("assets/images/images/tapetTest.png"); */
-/* } */
-
-.addVacationForm {
-  width: 500px;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
 .isStar {
   color: gold;
 }
+
 .graph {
   width: 75%;
   height: 75%;
@@ -56,11 +26,6 @@ font-family: 'Open Sans', sans-serif; */
 
 .iconsColor {
   color: rgba(0, 0, 0, 0.699);
-}
-
-.header {
-  color: white;
-  /* background-image: url("assets/images/header.png"); */
 }
 
 .headerS {
@@ -103,62 +68,54 @@ font-family: 'Open Sans', sans-serif; */
   transform: rotate(3deg);
 }
 
-/* Popular */
-/* .popularRow {
-  width: 1400px;
-  margin: 0 auto;
-}
-.cardIMG {
-  width: 18rem;
-} */
-
+/*Most Popular */
 .a-box {
   display: inline-block;
-  width: 240px;
   text-align: center;
+  width: 240px;
 }
 
 .img-container {
-  height: 230px;
-  width: 200px;
-  overflow: hidden;
   border-radius: 0px 0px 20px 20px;
   display: inline-block;
+  height: 230px;
+  overflow: hidden;
+  width: 200px;
 }
 
 .img-container img {
-  transform: skew(0deg, -13deg);
   height: 250px;
   margin: -35px 0px 0px -70px;
+  transform: skew(0deg, -13deg);
 }
 
 .inner-skew {
-  display: inline-block;
+  background: #c8c2c2;
   border-radius: 20px;
+  display: inline-block;
+  font-size: 0px;
+  height: 250px;
+  margin: 30px 0px 0px 0px;
   overflow: hidden;
   padding: 0px;
   transform: skew(0deg, 13deg);
-  font-size: 0px;
-  margin: 30px 0px 0px 0px;
-  background: #c8c2c2;
-  height: 250px;
   width: 200px;
 }
 
 .text-container {
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-  padding: 120px 20px 20px 20px;
-  border-radius: 20px;
   background: #fff;
-  margin: -120px 0px 0px 0px;
-  line-height: 19px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   font-size: 14px;
+  line-height: 19px;
+  margin: -120px 0px 0px 0px;
+  padding: 120px 20px 20px 20px;
 }
 
 .text-container h3 {
-  margin: 20px 0px 10px 0px;
   color: #04bcff;
   font-size: 18px;
+  margin: 20px 0px 10px 0px;
 }
 
 /* Footer */
@@ -168,8 +125,8 @@ font-family: 'Open Sans', sans-serif; */
 }
 
 .footerIcon {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
 }
 
 .footerIcon:hover {
