--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -50,26 +50,24 @@ font-family: 'Open Sans', sans-serif; */
 } */
 
 /* Next vacation */
-@media (max-width: 1028px) {
-  /* #title {
+/* @media (max-width: 1028px) { */
+/* #title {
     text-align: center;
   }
   .title-img {
     position: static;
     transform: rotate(0);
   } */
-  /* .nextVacationCard {
-    width: 1200px;
-  } */
-}
+
+/* } */
 
 .homeTitle {
   font-family: "Merienda", cursive;
 }
-.nextVacationCard {
-  /* width: 850px; */
-  /* margin-left: 15rem; */
-}
+/* .nextVacationCard { */
+/* width: 850px; */
+/* margin-left: 15rem; */
+/* } */
 .nextVacationImg {
   width: 200px;
   border-radius: 8px;
