single card styled need google font

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -31,6 +31,9 @@ font-family: 'Open Sans', sans-serif; */
 .numOfStars {
   font-family: "Merienda", cursive;
 }
+.vacationDestination {
+  font-family: "Cinzel Decorative", cursive;
+}
 
 .headerS {
   /* background-color: rgba(3, 149, 165, 0.7); */
