--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,5 +1,6 @@
 .NavHeader {
-  background: linear-gradient(-70deg, #024873 20%, rgba(0, 0, 0, 0) 80%), #f28963;
+  /* background: linear-gradient(-70deg, #024873 20%, rgba(0, 0, 0, 0) 80%), #f28963; */
+  background: rgb(121, 121, 121);
 }
 
 .iconsColor {
@@ -21,9 +22,9 @@
   font-family: "Noto Sans KR", sans-serif;
 }
 
-.openSansFont {
+/* .openSansFont {
   font-family: "Open Sans", sans-serif;
-}
+} */
 
 .cinzelDecorativeFont {
   font-family: "Cinzel Decorative", cursive;
@@ -74,33 +75,59 @@
 .dates {
   letter-spacing: 1px;
 }
+.mostPopularText {
+  line-height: 1.8;
+}
+
 /* TODO: גודל שווה לתמונות */
 /* .vacationImg {
   width: 350px;
 } */
 /* Next vacation */
-/* @media (max-width: 1028px) { */
-/* #title {
-    text-align: center;
-  }
-  .title-img {
-    position: static;
-    transform: rotate(0);
-  } */
+/*  */
 
-/* } */
+.card-holder {
+  margin: 2em auto;
+  max-width: 600px;
+  /* min-height: fit-content; */
+}
 
-/* .nextVacationCard { */
-/* width: 850px; */
-/* margin-left: 15rem; */
-/* } */
+.cardNext {
+  /* font-family: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif; */
+  font-size: 3em;
+  font-weight: 800;
+  height: 4em;
+  width: 64em;
+  padding: 0.5em 1em;
+  border-radius: 0.25em;
+  display: table-cell;
+  vertical-align: middle;
+  letter-spacing: -2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/*  */
+.nextCard {
+  width: 750px;
+}
+.nextPrice {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  background: lightblue;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  text-align: center;
+}
 
 .nextVacationImg {
-  width: 200px;
+  width: 300px;
   border-radius: 8px;
   transition: 0.5s all ease-in-out;
   margin: 0 auto;
 }
+
 .nextVacationDiv:hover img {
   transform: scale(1.1);
   transform: rotate(3deg);
@@ -158,7 +185,8 @@
 
 /* Footer */
 .footer {
-  background-color: #f25e5e;
+  /* background-color: #f25e5e; */
+  background-color: rgb(179, 179, 179);
   height: 80px;
 }
 
