--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,11 +1,18 @@
 .NavHeader {
   /* background: linear-gradient(-70deg, #024873 20%, rgba(0, 0, 0, 0) 80%), #f28963; */
   /* background: rgb(121, 121, 121); */
-  background: #adb5bd;
+  background-image: linear-gradient(to bottom, rgba(173, 181, 189, 1), rgba(255, 255, 255, 0));
+  /* background-color: #adb5bd; */
 }
 
 .iconsColor {
   color: rgba(0, 0, 0, 0.699);
+}
+
+abbr[title] {
+  border-bottom: none !important;
+  cursor: inherit !important;
+  text-decoration: none !important;
 }
 
 .graph {
@@ -78,15 +85,29 @@
 }
 .mostPopularText {
   line-height: 1.8;
+  /* background-color: rgba(4, 188, 255, 0.2); */
+  background-image: linear-gradient(white, rgba(135, 198, 221, 0.5), white);
 }
 
 /* TODO: גודל שווה לתמונות */
-/* .vacationImg {
-  width: 350px;
-} */
-/* Next vacation */
-/*  */
+.vacationImg {
+  /* width: 350px; */
+  /* height: 100%; */
+  height: 232px;
+}
 
+/* Home */
+
+.styledDots {
+  margin: 7px auto;
+  border-style: dotted none none none;
+  border-width: 7px;
+  color: #8c8f8f;
+  height: 0;
+  width: 5%;
+}
+
+/* next vacation card */
 .card-holder {
   margin: 2em auto;
   max-width: 600px;
@@ -107,7 +128,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-/*  */
+/* next vacation  */
 .nextCard {
   width: 750px;
 }
@@ -187,8 +208,8 @@
 /* Footer */
 .footer {
   /* background-color: #f25e5e; */
-  background-color: #adb5bd;
-  height: 80px;
+  /* background-color: #adb5bd; */
+  background-image: linear-gradient(to top, rgba(173, 181, 189, 1), rgba(255, 255, 255, 0));
 }
 
 .footerIcon {
