--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -28,9 +28,9 @@ abbr[title] {
   font-family: "Noto Sans KR", sans-serif;
 }
 
-/* .openSansFont {
+.openSansFont {
   font-family: "Open Sans", sans-serif;
-} */
+}
 
 .cinzelDecorativeFont {
   font-family: "Cinzel Decorative", cursive;
@@ -70,20 +70,13 @@ abbr[title] {
 .dates {
   letter-spacing: 1px;
 }
-.mostPopularText {
-  line-height: 1.8;
-  /* background-color: rgba(4, 188, 255, 0.2); */
-  background-image: linear-gradient(white, rgba(135, 198, 221, 0.5), white);
-}
 
-/* TODO: גודל שווה לתמונות */
 .vacationImg {
-  /* width: 350px; */
-  /* height: 100%; */
   height: 232px;
 }
 
 /* Home */
+
 /* carousel */
 
 .randomsText {
@@ -91,58 +84,16 @@ abbr[title] {
 }
 .carouselTextArea {
   background-color: white;
-}
-
-/* next vacation card */
-.card-holder {
-  margin: 2em auto;
-  max-width: 600px;
-  /* min-height: fit-content; */
-}
-
-.cardNext {
-  /* font-family: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif; */
-  /* font-size: 3em; */
-  /* font-weight: 800; */
-  height: 4em;
-  width: 64em;
-  padding: 0.5em 1em;
-  border-radius: 0.25em;
-  display: table-cell;
-  vertical-align: middle;
-  /* letter-spacing: -2px; */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-/* next vacation  */
-
-.nextCard {
-  width: 750px;
-}
-.nextPrice {
-  position: absolute;
-  top: 8px;
-  right: 16px;
-  background: lightblue;
-  border-radius: 50%;
-  width: 75px;
-  height: 75px;
-  text-align: center;
-}
-
-.nextVacationImg {
-  width: 300px;
-  border-radius: 8px;
-  transition: 0.5s all ease-in-out;
-  margin: 0 auto;
-}
-
-.nextVacationDiv:hover img {
-  transform: scale(1.1);
-  transform: rotate(3deg);
+  opacity: 0.5;
 }
 
 /*Most Popular */
+
+.mostPopularText {
+  line-height: 1.8;
+  background-image: linear-gradient(white, rgba(135, 198, 221, 0.5), white);
+}
+
 .a-box {
   display: inline-block;
   text-align: center;
@@ -194,8 +145,6 @@ abbr[title] {
 
 /* Footer */
 .footer {
-  /* background-color: #f25e5e; */
-  /* background-color: #adb5bd; */
   background-image: linear-gradient(to top, rgba(173, 181, 189, 1), rgba(255, 255, 255, 0));
 }
 
@@ -206,25 +155,4 @@ abbr[title] {
 
 .footerIcon:hover {
   color: rgba(0, 0, 0, 0.699);
-}
-
-.a {
-  background-color: #024873;
-  border-color: rgba(2, 71, 114, 1);
-}
-.b {
-  background-color: #0396a6;
-  /* border-color: rgba(3, 149, 165, 1); */
-}
-.c {
-  background-color: #04bfad;
-  border-color: rgba(3, 191, 172, 1);
-}
-.d {
-  background-color: #f28963;
-  border-color: rgba(242, 137, 99, 1);
-}
-.e {
-  background-color: #f25e5e;
-  border-color: rgba(242, 94, 94, 1);
 }
